# Comfyui-custom-nodes

_custom_nodes/ComfyUI-Align/: .gitignore  .tracking  README.md  README_zh.md  __init__.py  pyproject.toml
_custom_nodes/ComfyUI-Align/server/: color_preset_api.py
_custom_nodes/ComfyUI-Align/web/js/: index.js
_custom_nodes/ComfyUI-Align/web/js/actions/: align-groups.js  align-nodes-to-group.js  align.js  color.js  index.js  operations.js  stretch-groups.js  stretch.js
_custom_nodes/ComfyUI-Align/web/js/config/: config-validator.js  default-config.js
_custom_nodes/ComfyUI-Align/web/js/core/: color-manager.js  plugin.js  state.js
_custom_nodes/ComfyUI-Align/web/js/events/: event-handlers.js  event-listener-manager.js  selection-change-listener.js
_custom_nodes/ComfyUI-Align/web/js/ui/: about-panel.js  color-picker.js  dom-utils.js  icons.js  menu.js  notifications.js  styles.js
_custom_nodes/ComfyUI-Align/web/js/utils/: color-preset-manager.js  color-processing.js  comfy-app.js  general-utils.js  group-utils.js  node-utils.js  svg-paths.js
_custom_nodes/ComfyUI-Crystools/: __init__.py  pyproject.toml
_custom_nodes/ComfyUI-Crystools/core/: version.py
